<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity" android:backgroundTint="@color/ic_launcher_background"
        android:background="@color/ic_launcher_background">

    <Button
            android:text="@string/Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reg_create_btn"
            android:layout_alignParentStart="true"
            android:layout_marginTop="510dp"
            android:layout_alignParentTop="true" android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorButton" android:textColor="@color/ic_launcher_background"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:id="@+id/DisplayNameEditText"
            android:layout_marginTop="150dp" android:hint="@string/display_name" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true" android:id="@+id/EmailEditText"
            android:layout_marginTop="230dp" android:hint="@string/email" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:id="@+id/PasswordEditText"
            android:layout_marginTop="390dp" android:hint="@string/password" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <TextView
            android:text="@string/create_a_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" android:id="@+id/textView2" android:layout_marginTop="100dp"
            android:textColor="@color/colorPrimaryDark" android:textSize="18sp" android:layout_marginLeft="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:layout_centerHorizontal="true" android:id="@+id/reg_mobile"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_marginTop="310dp"
            android:layout_alignParentTop="true" android:hint="Mobile Number ..."/>
</RelativeLayout>