<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StartActivity" android:background="@color/ic_launcher_background">

    <Button
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/start_login_btn"
            android:layout_marginTop="450dp"
            android:layout_alignParentStart="true"
            android:textColor="@color/ic_launcher_background"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:id="@+id/start_login_email_field"
            android:layout_marginTop="280dp"
            android:hint="@string/enter_your_email"
            android:importantForAutofill="yes"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:id="@+id/start_password_field"
            android:importantForAutofill="yes"
            android:layout_marginTop="360dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/enter_your_password"/>
    <TextView
            android:text="Log Into Your Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/start_login_lbl"
            android:layout_marginTop="190dp"
            android:layout_alignStart="@+id/start_login_btn"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher"
            android:layout_alignParentStart="true" android:layout_marginStart="150dp"
            android:layout_alignParentTop="true" android:id="@+id/imageView" android:layout_marginTop="60dp"/>
</RelativeLayout>