<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/ic_launcher_background">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MainPage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textSize="18sp"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
            android:layout_marginTop="190dp" android:id="@+id/mainPageTextView"
            android:textColor="@color/colorPrimaryDark"/>
    <Button
            android:text="@string/Need_a_New_Account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_reg_btn"
            android:layout_alignParentTop="true"
            android:layout_marginTop="280dp"
            android:textColor="@color/ic_launcher_background" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>
    <Button
            android:text="@string/Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_login_btn"
            android:layout_alignParentStart="true" android:layout_alignParentTop="true"
            android:layout_marginTop="360dp"
            android:textColor="@color/ic_launcher_background" android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@mipmap/ic_launcher_round"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true" android:id="@+id/imageView3"
            android:layout_marginTop="60dp" android:layout_marginLeft="150dp"/>
    <Button
            android:text="Forgot / Change ID / Password"
            android:layout_width="330dp"
            android:layout_height="36dp"
            android:id="@+id/main_recover_btn" android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
            android:textColor="@color/com_facebook_share_button_text_color"
            android:background="@color/com_facebook_button_background_color_disabled"
            android:layout_alignParentEnd="true" android:layout_marginTop="450dp" android:layout_alignParentTop="true"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>

</RelativeLayout>